Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5667

C++ broker: QMF subscribe events are not raised with AMQP 1.0

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.26
    • 0.29
    • C++ Broker
    • None

    Description

      QMF subscribe and unsubscribe events are not raised with the AMQP 1.0 protocol.

      To reproduce:
      1. Start a qpidd broker with AMQP 1.0 support
      2. Start qpid-printevents to show QMF events on the broker.
      3. run: qpid-receive -a "q;

      {create:always}

      "
      Note printevents shows subscribe and unsubscribe events.
      4. run: qpid-receive -a "q;

      {create:always}

      " --connection-options '

      {protocol:amqp1.0}

      '
      Note there are no subscribe/unsubscribe events in printevents output.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: